fix details page alignment issues

--- a/src/app/cube/details/details.component.scss
+++ b/src/app/cube/details/details.component.scss
@@ -16,8 +16,8 @@
   margin-bottom: 20px;
 }
 
-section:not(.details__splash) {
-  margin-top: 70px;
+.section {
+  padding-top: 70px;
 }
 
 .details__splash-container {
